# FastAPI-micro-service

./: .gitignore  LICENSE  README.md
inventory-micro-service/: pyproject.toml
inventory-micro-service/inventory_micro_service/: consumer.py  main.py
payment-micro-service/: pyproject.toml
payment-micro-service/payment_micro_service/: consumer.py  main.py
