[tool.poetry]
name = "inventory-micro-service"
version = "0.1.0"
description = ""
authors = ["Anbarasan Vellaiyan <anbarasan.vellaiyan@cytel.com>"]
readme = "README.md"
packages = [{include = "inventory_micro_service"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.75.0"
redis-om = "0.0.20"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
